--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,8 @@
   <title>Simple Passkey Demo from Trusona</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="assets/css/output.css" rel="stylesheet"> 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
